--- a/metajam_example/HBR_watershed_1.Rmd
+++ b/metajam_example/HBR_watershed_1.Rmd
@@ -30,7 +30,7 @@ library(readxl) # for reading the template excel sheet
 
 ```
 
-####Step 2: Find the link to the dataset
+#### Step 2: Find the link to the dataset
 Go to the web address for the dataset and find the download button for the data. 
 
 In our case the link is: https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-hbr.3.15&entityid=fdc489886309c2f3076ffaea26eb0f28
@@ -41,8 +41,10 @@ In our case, we'll just put it into the metajam_example folder.
 ```{r}
 
 #eg desired_path_to_data <- "~/Desktop"
-desired_path_to_data <- "/home/kpeach/R/SI_river_data/lterwg-si-export/metajam_example"
+desired_path_to_data <- "~/SI_river_data"
 
+# create the folder if it does not exist yet
+dir.create(desired_path_to_data, showWarnings = FALSE)
 ```
 
 
@@ -50,9 +52,10 @@ desired_path_to_data <- "/home/kpeach/R/SI_river_data/lterwg-si-export/metajam_e
 
 ```{r}
 
+my_data_url <- "https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-hbr.3.15&entityid=fdc489886309c2f3076ffaea26eb0f28"
 
 # this will download the data into a folder and save the path to that folder
-downloaded_data <- download_d1_data("https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-hbr.3.15&entityid=fdc489886309c2f3076ffaea26eb0f28", path = desired_path_to_data)
+downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_to_data)
 
 
 ```
@@ -84,7 +87,6 @@ Reading in template
 
 ```{r}
 
-
 template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"), 
                                sheet = "Raw Data",
                                col_types = "text"
@@ -104,10 +106,17 @@ HBR_watershed_1_data <- my_data$data
 #There are 652 rows in this df
 
 #Adding a column to identify the LTER site - Hubbar Brook HBR
+# Use nrow() instead
+# LTER_name <- rep('HBR', nrow(HBR_watershed_1_data))
+# 
+# # HBR_watershed_1_data <- cbind(HBR_watershed_1_data, 'LTER' = LTER_name)
 
-LTER_name <- rep('HBR', 652)
+# But this is not necessary, R will repeat the value for you (also in base R with HBR_watershed_1_data$LTER <- "HBR")
+# the tidy way
+HBR_watershed_1_data <- HBR_watershed_1_data %>% 
+  add_column(LTER = 'HBR', .before = "Year")
 
-HBR_watershed_1_data <- cbind(HBR_watershed_1_data, 'LTER' = LTER_name)
+# same below
 
 Site_name <- rep('knb-lter-hbr.3.15', 652)
 
@@ -116,8 +125,6 @@ HBR_watershed_1_data <- cbind(HBR_watershed_1_data, 'Site/Stream Name' = Site_na
 
 HBR_watershed_1_data <- HBR_watershed_1_data %>% 
   rename('Sampling Date' = 'Year_Month')
-
-
 
 
 #Removing the volwt_ preface from many of the column names. That preface was preventing me from identifying which columns were a match to the template 
