--- a/metajam_example/HBR_watershed_3.Rmd
+++ b/metajam_example/HBR_watershed_3.Rmd
@@ -40,7 +40,10 @@ In our case, we'll just put it into the metajam_example folder.
 ```{r}
 
 #eg desired_path_to_data <- "~/Desktop"
-desired_path_to_data <- "/home/kpeach/R/SI_river_data/lterwg-si-export/metajam_example"
+desired_path_to_data <- "~/SI_river_data"
+
+# create the folder if it does not exist yet
+dir.create(desired_path_to_data, showWarnings = FALSE)
 
 
 ```
@@ -48,9 +51,10 @@ desired_path_to_data <- "/home/kpeach/R/SI_river_data/lterwg-si-export/metajam_e
 #### Step 4: Download the data by pasting the link you just copied
 ```{r}
 
+my_data_url <- "https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-hbr.5.15&entityid=441d825cc3620a48bddddab63a19ecc5"
 
 # this will download the data into a folder and save the path to that folder
-downloaded_data <- download_d1_data("https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-hbr.5.15&entityid=441d825cc3620a48bddddab63a19ecc5", path = desired_path_to_data)
+downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_to_data)
 
 
 ```
@@ -74,15 +78,14 @@ HBR_watershed_3_data <- my_data$data
 
 #Adding a column to identify the LTER site - Hubbar Brook HBR
 
-LTER_name <- rep('HBR', 652)
-
-HBR_watershed_3_data <- cbind(HBR_watershed_3_data, 'LTER' = LTER_name)
+# the tidy way
+HBR_watershed_3_data <- HBR_watershed_3_data %>% 
+  add_column(LTER = 'HBR', .before = "Year")
 
 #There is no site name in the csv file so I pulled this site identifier from the data portal
 
-Site_name <- rep('knb-lter-hbr.5.15', 652)
-
-HBR_watershed_3_data <- cbind(HBR_watershed_3_data, 'Site/Stream Name' = Site_name)
+HBR_watershed_3_data <- HBR_watershed_3_data %>% 
+  add_column('Site/Stream Name' = 'knb-lter-hbr.5.15', .before = "Year")
 # I can see that the column Year_Month includes the info from the column in the template 'Sampling Date' so I want to rename that column 
 
 HBR_watershed_3_data <- HBR_watershed_3_data %>% 
@@ -98,13 +101,16 @@ HBR_watershed_3_data <- HBR_watershed_3_data %>%
 
 #Removing the volwt_ preface from many of the column names. That preface was preventing me from identifying which columns were a match to the template 
 
-names(HBR_watershed_3_data)[5:29] <- substring(names(HBR_watershed_3_data)[5:29],7,15)
+names(HBR_watershed_3_data)[7:31] <- substring(names(HBR_watershed_3_data)[7:31],7,15)
 
-HBR_watershed_3_data <- HBR_watershed_3_data %>% 
-  rename('Si' = 'SiO2') 
-
+#Spec Cond is an exact match to the template column Spec Cond so I just need to change the name 
 HBR_watershed_3_data <- HBR_watershed_3_data %>% 
   rename('Spec Cond' = 'SpecCond')
+
+#SiO2 (silicon dioxide) is a close match to Si (silicon) but not identical
+close_match <- my_data$attribute_metadata %>% 
+  filter(attributeName == 'volwt_SiO2')
+
 
 ```
 
@@ -137,7 +143,7 @@ Fuzzy match
 
 (lookup_table <- fuzzy_match %>%
   mutate(watershed3 = case_when(
-    template %in% c("TOC", "TN", "TKN", "TDP", "PP", "PON", "DOP") ~ NA_character_,
+    template %in% c("TOC", "TN", "TKN", "TDP", "PP", "PON", "DOP", "Si") ~ NA_character_,
     TRUE ~ watershed3)))
 
 correct_colnames <- lookup_table$template
